Fixes for java streams